Alters setup for springboot
Adds new features

fixes #173
Co-Author Sofie Othilie Dregi <sofieod@stud.ntnu.no>